flowPackageSource/ImportFlow/objects/Fileback__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Rebate_Amount__c</fullName>
        <label>Calculated Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust__c</fullName>
        <label>Cust #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDP_Category__c</fullName>
        <formula>If(Contains(Description__c, &quot;BW&quot;),  &quot;BW&quot;, 
				If(Contains(Description__c, &quot;SOLID&quot;), &quot;SOLID&quot;, 
								If(Contains(Description__c, &quot;SANDED&quot;), &quot;SANDED&quot;, 
												If(Contains(Description__c, &quot;ASPEN&quot;), &quot;ASPEN&quot;, 
																If(Contains(Description__c, &quot;PEBBLE&quot;), &quot;PEBBLE&quot;, 
																				If(Contains(Description__c, &quot;METALLIC&quot;), &quot;METALLIC&quot;, 
																								If(Contains(Description__c, &quot;QUARRY&quot;), &quot;QUARRY&quot;, 
																												If(Contains(Description__c, &quot;EARTHEN&quot;), &quot;EARTHEN&quot;, 
																																If(Contains(Description__c, &quot;MOSAIC&quot;), &quot;MOSAIC&quot;, 
																																				If(Contains(Description__c, &quot;TEMPEST&quot;), &quot;TEMPEST&quot;,
																																							If(Contains(Description__c, &quot;SUPREME&quot;), &quot;SUPREME&quot;, 
			&quot;&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDP__c</fullName>
        <formula>If(Contains(Description__c, &quot;BW&quot;),  227, 
				If(Contains(Description__c, &quot;SOLID&quot;), 243, 
								If(Contains(Description__c, &quot;SANDED&quot;), 285, 
												If(Contains(Description__c, &quot;ASPEN&quot;), 333, 
																If(Contains(Description__c, &quot;PEBBLE&quot;), 333, 
																				If(Contains(Description__c, &quot;METALLIC&quot;), 333, 
																								If(Contains(Description__c, &quot;QUARRY&quot;), 431, 
																												If(Contains(Description__c, &quot;EARTHEN&quot;), 431, 
																																If(Contains(Description__c, &quot;MOSAIC&quot;), 431, 
																																				If(Contains(Description__c, &quot;TEMPEST&quot;), 473,
																																							If(Contains(Description__c, &quot;SUPREME&quot;), 375, 
			0)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fileback_Month_Year__c</fullName>
        <label>Fileback Month/Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Number__c</fullName>
        <label>IP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Details__c</fullName>
        <label>Import Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Status__c</fullName>
        <label>Import Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed Successfully</fullName>
                </value>
                <value>
                    <fullName>Error Encountered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inv_Date__c</fullName>
        <label>Inv Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inv__c</fullName>
        <label>Inv#</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <label>Ship To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suf__c</fullName>
        <label>Suf</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rebate__c</fullName>
        <label>Total Rebate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Rebate__c</fullName>
        <label>Unit Rebate</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Fileback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Cust__c</columns>
        <columns>Ship_To__c</columns>
        <columns>Name__c</columns>
        <columns>Product__c</columns>
        <columns>Description__c</columns>
        <columns>Inv__c</columns>
        <columns>Suf__c</columns>
        <columns>Line__c</columns>
        <columns>Inv_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>Fileback_With_Status</fullName>
        <columns>Distributor__c</columns>
        <columns>Fileback_Month_Year__c</columns>
        <columns>IP_Number__c</columns>
        <columns>Product__c</columns>
        <columns>DDP_Category__c</columns>
        <columns>Inv_Date__c</columns>
        <columns>Import_Status__c</columns>
        <columns>Import_Details__c</columns>
        <columns>Calculated_Rebate_Amount__c</columns>
        <columns>Total_Rebate__c</columns>
        <columns>Unit_Rebate__c</columns>
        <columns>DDP__c</columns>
        <filterScope>Everything</filterScope>
        <label>Fileback With Status</label>
    </listViews>
    <nameField>
        <displayFormat>Fileback-{000000}</displayFormat>
        <label>Fileback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fileback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>